--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
     "bs-platform": "^7.1.1",
     "semantic-release": "^17.0.4"
   },
+  "dependencies": {
+    "amqp-connection-manager": "^3.2.0",
+    "amqplib": "^0.5.5"
+  },
   "repository": {
     "type": "git",
     "url": "https://github.com/amsross/re-amqp-connection-manager.git"
