--- a/.travis.yml
+++ b/.travis.yml
@@ -12,6 +12,4 @@ jobs:
       node_js: lts/*
       deploy:
         provider: script
-        skip_cleanup: true
-        script:
-          - npx semantic-release
+        script: npx semantic-release
