--- a/package.json
+++ b/package.json
@@ -19,9 +19,8 @@
     "bs-platform": "^7.1.1",
     "semantic-release": "^17.0.4"
   },
-  "dependencies": {
-    "amqp-connection-manager": "^3.2.0",
-    "amqplib": "^0.5.5"
+  "peerDependencies": {
+    "amqp-connection-manager": "^3.2.0"
   },
   "repository": {
     "type": "git",
